# first_app

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/first_app/: main.py
src/first_app.egg-info/: PKG-INFO  SOURCES.txt
src/first_app/cli/: main.py
src/first_app/models/: corporate_actions.py
src/first_app/persistence/: json_store.py
src/first_app/processor/: action_processor.py  strategy_factory.py
src/first_app/processor/strategies/: dividend_processor.py  merger_processor.py  split_processor.py
src/first_app/queue/: in_memory_queue.py  persistent_queue.py
src/first_app/services/: logging_service.py  validation.py
tests/: test_corporate_action.py  test_main.py  test_persistent_queue.py  test_processing_stategies.py  test_processor.py  test_queue.py
